# BESSOptimizer

./: FILES_INVENTORY.md  Run_BESS.command  bess_alpha_search_v5.db  pyproject.toml
config/: baseline_cv_NYC.json  best_config_CAPITL.json  best_config_CENTRL.json  best_config_DUNWOD.json  best_config_GENESE.json  best_config_HUDVL.json  best_config_LONGIL.json  best_config_MHKVL.json  best_config_MILLWD.json  best_config_NORTH.json  best_config_NYC.json  best_config_NYC_v5_candidate.json  best_config_WEST.json  cache_plan.json  data_sources.yaml  events.jsonl  exec_opt_nyc_365d.db  memory.jsonl  training.yaml
models/NYC/: best_config_NYC.json  model.pth  scaler.pkl
